WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137230
Web Inspector: Delay and white area when Web Inspector crashes
https://bugs.webkit.org/show_bug.cgi?id=137230
Summary
Web Inspector: Delay and white area when Web Inspector crashes
Timothy Hatcher
Reported
2014-09-29 14:03:16 PDT
When the Web Inspector crashes the docked view turns white and sometimes takes awhile to close.
Attachments
Patch
(4.90 KB, patch)
2014-09-29 14:04 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-09-29 14:04:07 PDT
<
rdar://problem/18492135
>
Timothy Hatcher
Comment 2
2014-09-29 14:04:38 PDT
Created
attachment 238877
[details]
Patch
Joseph Pecoraro
Comment 3
2014-10-20 11:50:01 PDT
Comment on
attachment 238877
[details]
Patch Looks good to me! Probably needs a WK2 Owner
WebKit Commit Bot
Comment 4
2014-10-20 12:38:05 PDT
Comment on
attachment 238877
[details]
Patch Clearing flags on attachment: 238877 Committed
r174902
: <
http://trac.webkit.org/changeset/174902
>
WebKit Commit Bot
Comment 5
2014-10-20 12:38:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug