Web Inspector: Delay and white area when Web Inspector crashes https://bugs.webkit.org/show_bug.cgi?id=137230

Reviewed by Anders Carlsson.

* UIProcess/WebInspectorProxy.cpp:
(WebKit::processDidCrash): Added.
(WebKit::WebInspectorProxy::eagerlyCreateInspectorPage): Hook up loader client.


Canonical link: https://commits.webkit.org/155753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174902 268f45cc-cd09-0410-ab3c-d52691b4dbfc